<resources>
    <string name="app_name">NephSynd</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="Hello">Hello</string>
    <string name="result_register_item">Result Register</string>
    <string name="open_drawer">open drawer for navigation</string>
    <string name="close_drawer">close drawer of navigation</string>
    <string name="resulttext">Choose Today\'s Result :-</string>
    <string name="button_save_text">Save </string>
    <string name="btn_add_sideeffect">SideEffect</string>
    <string name="btn_add_disease">Disease</string>
    <string name="btn_add_dosage">Dosage</string>
    <string name="Choose_Disease">Choose Disease</string>
    <string name="Choose_Mediicine">Choose Medicine</string>
    <string name="Choose_doctor">Choose Doctor</string>
    <string name="tv_dosage">Dosage Value</string>
    <string name="dosagehint">Enter dosage quantity</string>
    <string name="patientPostion_for_multiscreen">PatientPosition</string>
    <string name="createNewMenuItemText">Create New</string>
    <string name="Choose_SideEffects">Choose Side Effects</string>
    <string name="tv_sideeffectexplanation">Side Effect Explaination :-</string>
    <string name="sideEffectHintExplanation">Enter your explanation here</string>
    <string name="tv_diseasevalue">Disease Value</string>
    <string name="tv_startDate">Start Date</string>
    <string name="tv_endDate">End Date</string>
    <string name="previous_two_day_result">PREVIOUS TWO DAY RESULT : </string>
    <string name="diseasehint">Ex. 97.5 degree celcius</string>
    <string name="cancel_disease_update">Cancel</string>
    <string name="reset_disease_data">Reset</string>
    <string name="Add_Disease_header">Add Diseases</string>
    <string name="resultHistory"> Result History </string>
    <string name="onDate"> On </string>
    <string name="arrowSymbol"><![CDATA[ -> ]]></string>
    <string name="noRecordFound">NO RECORD FOUND</string>
</resources>