<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/tv_lastTwoDayResult"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/resultHistory"
            android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"></TextView>

        <Button
            android:layout_marginRight="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:layout_alignParentRight="true"
            android:id="@+id/btn_more"
            android:layout_below="@id/tv_lastTwoDayResult"
            android:text="More Result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView

            android:id="@+id/tv_resultDatePick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_more"
            android:layout_margin="10dp"
            android:layout_toLeftOf="@id/ib_resultDatePickBtn"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1">

        </TextView>

        <ImageButton
            android:layout_marginRight="10dp"
            android:id="@+id/ib_resultDatePickBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_more"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_baseline_calendar_today_24">

        </ImageButton>

        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_resultDatePick"
            android:layout_margin="5dp"
            android:padding="10dp"
            android:text="@string/resulttext"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"></TextView>

        <Spinner

            android:id="@+id/sp_result"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_resultDatePick"
            android:layout_margin="10dp"
            android:layout_toRightOf="@id/tv1"
            android:padding="10dp"></Spinner>


        <Button
            android:id="@+id/bt_saveResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sp_result"
            android:layout_centerInParent="true"
            android:layout_margin="5dp"
            android:text="@string/button_save_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"></Button>


        <LinearLayout
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:id="@+id/linearlayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/bt_saveResult"
            android:layout_marginTop="2dp">


            <Button
                android:id="@+id/bt_sideEffect"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/btn_add_sideeffect"
                android:textAppearance="@style/TextAppearance.AppCompat.Small">

            </Button>

            <Button
                android:id="@+id/bt_disease"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/btn_add_disease"
                android:textAppearance="@style/TextAppearance.AppCompat.Small">

            </Button>

            <Button
                android:id="@+id/bt_dosage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/btn_add_dosage"
                android:textAppearance="@style/TextAppearance.AppCompat.Small">

            </Button>


        </LinearLayout>
        android:layout_below="@id/bt_saveResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/fragment_container_sideEffect"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/linearlayout1">


        </FrameLayout>

        <FrameLayout
            android:id="@+id/fragment_container_disease"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/linearlayout1">


        </FrameLayout>

        <FrameLayout
            android:id="@+id/fragment_container_dosage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/linearlayout1">


        </FrameLayout>

    </RelativeLayout>
</ScrollView>
